Worked on a few CSS issues to resemble the original even more

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <main>
         <form action="" method="post">
             <section id="info">
+                <div class="landing-filler"></div>
                 <h2>Student Info</h2>
                     <article>
                         <label for="name">Name: </label><input type="text" name="name" id="name" required><br>
@@ -27,6 +28,7 @@
                     </article>
             </section>
             <section id="html">
+                <div class="landing-filler"></div>
                 <h2>HTML</h2>
                 <article>
                     <h3>Question #1</h3>
@@ -46,6 +48,7 @@
                 </article>
             </section>
             <section id="css">
+                <div class="landing-filler"></div>
                 <h2>CSS</h2>
                 <article>
                     <label for="select">Can the CSS margin property accept negative values?</label>
